--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,63 +1,114 @@
-Style/Documentation:
+AllCops:
+  Exclude:
+    - 'db/schema.rb'
+    - 'db/migrate/*'
+    - 'vendor/**/*'
+    - 'bin/*'
+    - 'node_modules/**/*'
+  TargetRubyVersion: 2.3
+
+HasAndBelongsToMany:
   Enabled: false
 
-LineLength:
-   Max: 120
+Metrics/AbcSize:
+  Max: 50
+  Exclude:
+    - 'app/controllers/customers/registrations_controller.rb'
+    - 'app/models/segment_analytics.rb'
+    - 'lib/db_seed/pack_seeder.rb'
+
+Metrics/CyclomaticComplexity:
+  Max: 12
+
+Metrics/ClassLength:
+  Max: 250
+  Exclude:
+    - 'lib/db_seed/pack_seeder.rb'
+
+Metrics/LineLength:
+  Max: 80
+  Exclude:
+    - 'spec/models/subscription_spec.rb'
+
+Metrics/MethodLength:
+  Enabled: false
+
+Metrics/ModuleLength:
+  Enabled: false
+
+Metrics/PerceivedComplexity:
+  Max: 12
 
 Rails:
   Enabled: true
 
-AllCops:
+Rails/OutputSafety:
+  Enabled: false
+
+Style/AlignParameters:
+  EnforcedStyle: with_fixed_indentation
+
+Style/BlockComments:
   Exclude:
-    - "bin/**/*"
-    - "db/**/*"
-    - "engines/*/db/**/*"
-    - "engines/*/spec/test_app/**/*"
+    - 'spec/spec_helper.rb'
 
-Style/MultilineOperationIndentation:
-  EnforcedStyle: indented
+Style/ClassVars:
+  Exclude:
+    - 'spec/support/shared_connections.rb'
 
-Style/MultilineMethodCallIndentation:
-  EnforcedStyle: indented
-
-Style/Lambda:
+Style/Documentation:
   Enabled: false
 
-Style/StringLiterals:
-  EnforcedStyle: "double_quotes"
+Style/ExtraSpacing:
+  Exclude:
+    - 'bin/*'
 
-Style/NumericPredicate:
-  Enabled: false
+Style/FirstParameterIndentation:
+  EnforcedStyle: consistent
 
 Style/FrozenStringLiteralComment:
   Enabled: false
 
+Style/GuardClause:
+  Enabled: false
+
+Style/HashSyntax:
+  Exclude:
+    - 'Rakefile'
+    - 'lib/tasks/*.rake'
+    - 'tasks/*.rake'
+
+Style/IfUnlessModifier:
+  Enabled: false
+
+Style/IndentArray:
+  EnforcedStyle: consistent
+
+Style/IndentHash:
+  Enabled: consistent
+
+Style/MultilineMethodCallIndentation:
+  EnforcedStyle: indented
+
 Style/PercentLiteralDelimiters:
-  EnforcedStyle: "braces"
+  PreferredDelimiters:
+    '%':  ()
+    '%i': '[]'
+    '%q': ()
+    '%Q': ()
+    '%r': '{}'
+    '%s': ()
+    '%w': '[]'
+    '%W': '[]'
+    '%x': ()
+
+Style/PredicateName:
+  Enabled: false
+
+Style/StringLiterals:
+  Exclude:
+    - 'bin/*'
 
 Style/BlockDelimiters:
   Exclude:
     - 'spec/**/*'
-
-Metrics/BlockLength:
-  Enabled: false
-
-Rails/HttpPositionalArguments:
-  Enabled: false
-
-Style/TrailingCommaInLiteral:
-  Enabled: false
-
-
-Rails/SkipsModelValidations:
-  Enabled: false
-
-Metrics/MethodLength:
-  Max: 30
-
-Metrics/AbcSize:
-  Exclude:
-    - 'app/serializers/**/*'
-# Can remove when bbatsov/rubocop#4189 is released
-Lint/AmbiguousBlockAssociation:
-  Enabled: false
